fix: adjust CSS formatting for print styles and improve readability

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ aside ul {
   list-style: none;
   padding-left: 0;
 }
+
 /* Formato de impresión A4 */
 @page {
   size: A4;
@@ -10,7 +11,9 @@ aside ul {
 }
 
 @media print {
-  html, body {
+
+  html,
+  body {
     width: 210mm;
     height: 297mm;
     margin: 0;
@@ -18,16 +21,19 @@ aside ul {
     background: #fff !important;
     box-shadow: none !important;
   }
+
   .container {
     max-width: 100%;
     padding: 0;
   }
 }
+
 /* Salto de página para impresión PDF */
 .page-break {
   page-break-before: always;
   break-before: page;
 }
+
 @import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
